tests/sksl/errors/golden/InVarWithInitializerExpression.glsl
### Compilation failed:

error: 1: 'in' variables cannot use initializer expressions
1 error
